--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -25,14 +25,12 @@
       
     }
     .footer{
+      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       text-align: center;
       padding: 50px 0px;
-      color: #555;
+      color: #fafafa;
       background: #9ED5C5;
       border-top: 1px solid #f2f2f2;
-      p{
-        padding: 2px 0px;
-      }
     }
   }
   
