--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -1,36 +1,34 @@
-
 .App {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: #def5e5;
+  .content {
+    flex: 1;
+    text-align: center;
+  }
+  .header {
+    background-color: #8ec3b0;
+    height: 60px;
     display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    background-color: #DEF5E5;
-    .content{
-       flex: 1;
-       text-align: center;
-    }
-    .header{
-      background-color: #8EC3B0;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      .siteName a:-webkit-any-link{
-        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        color: #fafafa;
-        font-size: x-large;
-        font-weight: 600;
-        text-decoration: none;
-        margin-left: 36px;
-      }
-
-      
-    }
-    .footer{
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      text-align: center;
-      padding: 50px 0px;
+    align-items: center;
+    .siteName a:-webkit-any-link {
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
       color: #fafafa;
-      background: #9ED5C5;
-      border-top: 1px solid #f2f2f2;
+      font-size: x-large;
+      font-weight: 600;
+      text-decoration: none;
+      margin-left: 36px;
     }
   }
-  
+  .footer {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    text-align: center;
+    padding: 50px 0px;
+    color: #fafafa;
+    background: #9ed5c5;
+    border-top: 1px solid #f2f2f2;
+  }
+}
