--- a/src/components/WorkList/workList.module.scss
+++ b/src/components/WorkList/workList.module.scss
@@ -1,52 +1,56 @@
-
 .workLists {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    a:-webkit-any-link {
-        text-decoration: none;
-    }
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  a:-webkit-any-link {
+    text-decoration: none;
+  }
 
-    ul {
-        display: flex;
-        justify-content: space-between;
+  ul {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 24px;
+    li {
+      width: 46%;
+      margin: 1%;
+      margin-bottom: 45px;
+      display: flex;
+      align-items: flex-start;
+      a {
+        display: inline-flex;
         align-items: center;
-        flex-wrap: wrap;
-        list-style:none;
-        padding: 0;
-        margin: 24px;
-        li {
-            width: 50%;            
-            margin-bottom: 45px;
-            a {
-                display: inline-flex;
-                justify-content: space-between;
-                align-items: center;
-                .cover {
-                    img {
-                        margin: auto;
-                        max-width: 120px;
-                        max-height: 120px;
-                        background-color: #fafafa;
-                        border-radius: 10px;
-                        border-color: #fafafa;
-                        border-width: 4px;
-                        border-style: solid;
-                    }
-                }
-                .workbrief {
-                    text-align: left;
-                    padding-left: 15px;
-                    h3 {
-                        margin: 4px;
-                        font-size: 24px;
-                        color: rgb(51, 51, 51);
-                    }
-                    p {
-                    margin: 4px;
-                    padding: 8px 0px;
-                    color: rgba(0, 0, 0, 0.7);
-                    }
-                }
-            }
+        .cover {
+          width: 120px;
+          height: 120px;
+          background-color: #fafafa;
+          border-radius: 10px;
+          border-color: #fafafa;
+          border-width: 4px;
+          border-style: solid;
+          img {
+            margin: auto;
+            width: 120px;
+            height: 120px;
+            object-fit: contain;
+          }
         }
+        .workbrief {
+          text-align: left;
+          padding-left: 15px;
+          h3 {
+            margin: 4px;
+            font-size: 24px;
+            color: rgb(51, 51, 51);
+          }
+          p {
+            margin: 4px;
+            padding: 8px 0px;
+            color: rgba(0, 0, 0, 0.7);
+          }
+        }
+      }
     }
+  }
 }
