--- a/src/components/ChatRoomcomponents/chatArea.module.scss
+++ b/src/components/ChatRoomcomponents/chatArea.module.scss
@@ -42,6 +42,18 @@
         border-radius: 10px;
         margin-top: 0px;
         margin-bottom: 0px;
+        white-space: pre-wrap;
+        overflow-wrap: break-word;
+      }
+      .loadingMessage {
+        font-size: large;
+        width: max-content;
+        max-width: 100%;
+        padding: 16px 20px;
+        background-color: #fefefe;
+        border-radius: 10px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         overflow-wrap: break-word;
       }
     }
@@ -65,7 +77,7 @@
         margin-right: 4px;
       }
       .userMessage {
-        text-align: end;
+        text-align: start;
         font-size: large;
         padding: 10px 15px;
         width: max-content;
@@ -76,6 +88,7 @@
         margin-top: 0px;
         margin-bottom: 0px;
         margin-left: auto;
+        white-space: pre-wrap;
         overflow-wrap: break-word;
       }
     }
